--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ RcppExports.*
 .Rproj.userls
 
 #/data
-help_kuinkaAsentaaDevtoolsTritonilleEiToimi.txt
-help_kuinkaAsentaaDevtoolsTyokoneelle.txt
-memo.R
-memo.txt
+#help_kuinkaAsentaaDevtoolsTritonilleEiToimi.txt
+#help_kuinkaAsentaaDevtoolsTyokoneelle.txt
+#memo.R
+#memo.txt
 #*.RData
