conda environment for DirichletMultinomial

--- a/DirichletMultinomial.yml
+++ b/DirichletMultinomial.yml
@@ -5,12 +5,20 @@ channels:
   - defaults
 dependencies:
   - r-essentials
+  - r-rcpp
+  - r-ggplot2
+  - r-reshape2
+  - ply
+  - bioconductor-s4vectors
   - r-rcppgsl
   - r-devtools
   - bioconductor-genomeinfodb
   - bioconductor-genomicranges
+  - bioconductor-iranges
   - r-e1071
   - r-ggally
+  - gsl
+  - clang
 prefix: /Users/mpirttin/anaconda3/envs/DirichletMultinomial
 
 
