--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,28 +1,31 @@
-Package: DirichletMultinomial
+Package: DMMChrom
 Type: Package
-Title: Dirichlet-Multinomial Mixture Model Machine Learning for
-        Microbiome Data
-Version: 0.99.2
+Title: Dirichlet-Multinomial Mixture Model Machine Learning for chromatin feature data
+Version: 1.0
 Author: Martin Morgan <mtmorgan@fhcrc.org>, Goekcen Eraslan <goekcen.eraslan@helmholtz-muenchen.de>
-Maintainer: Martin Morgan <mtmorgan@fhcrc.org>
+Maintainer: MMaria Osmala <maria.osmala@aalto.fi>
 Description: Dirichlet-multinomial mixture models can be used to
-    describe variability in microbial metagenomic data. This package
+    describe variability in chromatin feature data. This package
     is an interface to code originally made available by Holmes,
     Harris, and Quince, 2012, PLoS ONE 7(2): 1-15, as discussed
-    further in the man page for this package, ?DirichletMultinomial.
+    further in the man page for this package, ?DMMChrom.
 License: LGPL-3
-Imports: Rcpp (>= 0.11.1), stats4, methods, Matrix, ggplot2, grid, reshape2, GGally, plyr, mgcv, e1071, parallel, S4Vectors, IRanges
+Imports: Rcpp (>= 1.0.6), stats4, methods, Matrix, ggplot2, grid, reshape2, GGally, plyr, mgcv, e1071, parallel, S4Vectors, IRanges
 Suggests: lattice, MASS, RColorBrewer, xtable, testthat
 Collate:
   AllGenerics.R
   util.R
   dmn.R
+  dmn.em.R
+  dmn.em.flip.R
+  dmn.em.shift.R
+  dmn.em.shift.flip.R
   dmngroup.R
   roc.R
   dmn_main.R
   dmn_graphics.R
   RcppExports.R
-SystemRequirements: gsl
+SystemRequirements: GNU GSL
+NeedsCompilation: yes
 biocViews: HighThroughputSequencing, Clustering, Classification
-Packaged: 2012-04-19 06:21:49 UTC; biocbuild
-LinkingTo: Rcpp, RcppGSL
+LinkingTo: Rcpp, RcppArmadillo, RcppGSL
