All model with shift functions implemented plus plain model lower bound calculations. The model with shift has a problem in BFGS step, the gradient does not go zero?

--- a/DirichletMultinomial.yml
+++ b/DirichletMultinomial.yml
@@ -8,7 +8,7 @@ dependencies:
   - r-rcpp
   - r-ggplot2
   - r-reshape2
-  - ply
+  - r-plyr
   - bioconductor-s4vectors
   - r-rcppgsl
   - r-devtools
