added code to check how EM and BFGS updates the parameters for debugging purposes, also gradient descent option added for model without shifting aand flipping

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,8 @@ Collate:
   dmn.em.flip.R
   dmn.em.shift.R
   dmn.em.shift.flip.R
+  dmn.em.gradient.descent.R
+  gradientDescent.R
   dmngroup.R
   roc.R
   dmn_main.R
