Nasty c++ [] vs () brackets bug fixed, the model with shifting feature works

--- a/DirichletMultinomial_R4.0.3.yml
+++ b/DirichletMultinomial_R4.0.3.yml
@@ -4,6 +4,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
+  - r-base=4.0.3
   - r-essentials
   - r-rcpp
   - r-rcpparmadillo
@@ -19,6 +20,6 @@ dependencies:
   - r-e1071
   - r-ggally
   - gsl
-  - clang
+
 
 
