--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,9 @@ Collate:
   dmn.em.shift.R
   dmn.em.shift.flip.R
   dmn.em.gradient.descent.R
+  dmn.em.shift.gradient.descent.R
   gradientDescent.R
+  gradientDescent.shift.R
   dmngroup.R
   roc.R
   dmn_main.R
