--- a/experiments/DMM_experiments.yml
+++ b/experiments/DMM_experiments.yml
@@ -10,7 +10,7 @@ dependencies:
   - r-ggplot2 
   - r-reshape2
   - bioconductor-s4vectors 
-  - bioconductor-biocgenerics
+  - bioconductor-biocgenerics=0.36.0
   - r-rcppgsl 
   - r-devtools 
   - bioconductor-genomeinfodb 
