--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
-Package: DMMChrom
+Package: ChromDMM
 Type: Package
-Title: Dirichlet-Multinomial Mixture Model Machine Learning for chromatin feature data
+Title: A Dirichlet-Multinomial Mixture Model For Clustering Heterogeneous Epigenetic Data
 Version: 1.0
-Author: Martin Morgan <mtmorgan@fhcrc.org>, Goekcen Eraslan <goekcen.eraslan@helmholtz-muenchen.de>
-Maintainer: MMaria Osmala <maria.osmala@aalto.fi>
-Description: Dirichlet-multinomial mixture models can be used to
-    describe variability in chromatin feature data. This package
-    is an interface to code originally made available by Holmes,
-    Harris, and Quince, 2012, PLoS ONE 7(2): 1-15, as discussed
-    further in the man page for this package, ?DMMChrom.
+Author: Maria Osmala <maria.osmala@aalto.fi>, Goekcen Eraslan <geraslan@broadinstitute.org>, Martin Morgan <mtmorgan@fhcrc.org>
+Maintainer: Maria Osmala <maria.osmala@aalto.fi>
+Description: This package implements a Dirichlet-Multinomial mixture model to chlester multiple chromatin features simultaenously.
+    The package is an extension of bioconductor packages DirichletMultinomial: Dirichlet-Multinomial Mixture Model 
+    Machine Learning for Microbiome Data by Martin Morgan. DirichletMultinomial is  an interface to code originally 
+    made available by Holmes,Harris, and Quince, 2012, PLoS ONE 7(2): 1-15, ?ChromDMM.
 License: LGPL-3
 Imports: Rcpp (>= 1.0.6), stats4, methods, Matrix, ggplot2, grid, reshape2, GGally, plyr, mgcv, e1071, parallel, S4Vectors, IRanges
 Suggests: lattice, MASS, RColorBrewer, xtable, testthat
