Add error checking to the clustering function

--- a/conda_environment_linux.yml
+++ b/conda_environment_linux.yml
@@ -12,6 +12,7 @@ dependencies:
   - gfortran
   - r-optparse
   - bioconductor-genomicranges
+  - bioconductor-iranges
   - r-egg
   - r-gridextra
   - r-cowplot
