--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(dmn, dmngroup,
        ## S4 generics
        fitted, predict, plot.clusters, bin_signal, extract_binned_signal,
        plot.Dirichlet, soft_kmeans, plot.EM, plot.label.distribution,
-       plot.clustering.comparison)
+       plot.clustering.comparison, plot.heatmap.before.clustering,
+       plot.heatmap.final)
 
 exportMethods(AIC, BIC, summary, show)
